Refactor html and add images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <title>ROCK, PAPER, SCiSSORS: TO THE DEATH</title>
+    <title>DA ROK, PAYPEAR, CEESARZ: 2 DETH 2 FJUREEUS</title>
   </head>
   <body>
     <div class="top-border">
@@ -14,7 +14,9 @@
       <text class="top-border__secret-alien-win-count">WiNZES: 0</text>
     </div>
     <section class="game-board">
-      <button class="game-board__classic-game-button">STORHT CLASEK GAYM (NO DETH i PROHMiS)
+      <button class="game-board__classic-game-button">
+        <h3>STORHT CLASEK GAYM (NO DETH i PROHMiS)</h3>
+        <img class="classic-card__cross-out" src="./assets/cross-out.png" alt="cross_out_on_classic_game_button">
         <div class="classic-card">
           <text class="classic-card__classic-game">CLASiEK GAEM ===
             <text class="classic-card__game-rules">ROK -BEETZ- SiHZRZ</text>
@@ -24,20 +26,25 @@
           </text>
         </div>
       </button>
-      <button class="game-board__classic-game-btn">STRAHT PiESFiL REELAKSiENG GAiME (BEZ TOBSHUN)
+      <button class="game-board__difficult-game-btn">
+        <h3>STAHT PiESFiL REELAKSiENG GAiME (BEZ TOBSHUN)</h3>
+        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
+        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
+        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
         <div class="difficult-card">
-          <text class="classic-card__classic-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK:
-            <text class="classic-card__game-rules">AiLAEEN -BEETZ- SiHZRZ</text>
-            <text class="classic-card__game-rules">AHLiEEN -BEEZ- PAiPR</text>
-            <text class="classic-card__game-rules">i -BiET- ... UH UM ... i MEEN ... UHEM ... AHLEiEN -BEEST- EVFREETiNG</text>
-            <h2 class="classic-card__game-rules">**THIZ WUN MOAR FUHN TRUZ MEE**</h2>
+          <text class="difficult-card__difficult-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK ===
+            <text class="difficult-card__game-rules">AiLAEEN -BEETZ- SiHZRZ</text>
+            <text class="difficult-card__game-rules">AHLiEEN -BEEZ- PAiPR</text>
+            <text class="difficult-card__game-rules">i -BiET- ... UH UM ... i MEEN ... UHEM ... AHLEiEN -BEEST- EVFREETiNG</text>
+            <h6 class="difficult-card_game-rules">yool seei heh heh</h6>
+            <h3 class="difficult-card__game-rules">**THIZ WUN MOAR FUHN TRUZ MEE**</h3>
           </text>
         </div>
       </button>
     </section>
     <div class="bottom-border">
-      <img class="bottom-border__player-icon">
-      <text class="bottom-border__player-name">HOOMOHN</text>
+      <img class="bottom-border__player-icon" src="./assets/human-player.png">
+      <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
     </div>
     <script type="text/javascript" src="./Player.js"></script>
