--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h3>STORHT CLASEK GAYM (NO DETH i PROHMiS)</h3>
         <img class="classic-card__cross-out" src="./assets/cross-out.png" alt="cross_out_on_classic_game_button">
         <div class="classic-card">
-          <text class="classic-card__classic-game">CLASiEK GAEM ===
+          <text class="classic-card__classic-game">CLASiEK GAEM
+            <text class="classic-card__game-rules">++++================================++++</text>
             <text class="classic-card__game-rules">ROK -BEETZ- SiHZRZ</text>
             <text class="classic-card__game-rules">SiSORZ -BEEZ- PAiPR</text>
             <text class="classic-card__game-rules">PAPRE -BEiT- ... ??? i FRGiT SRY</text>
@@ -26,16 +27,17 @@
           </text>
         </div>
       </button>
-      <button class="game-board__difficult-game-btn">
+      <button class="game-board__difficult-game-button">
         <h3>STAHT PiESFiL REELAKSiENG GAiME (BEZ TOBSHUN)</h3>
         <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
         <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
         <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
         <div class="difficult-card">
-          <text class="difficult-card__difficult-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK ===
+          <text class="difficult-card__difficult-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK
+            <text class="difficult-card__game-rules">++++================================++++</text>
             <text class="difficult-card__game-rules">AiLAEEN -BEETZ- SiHZRZ</text>
             <text class="difficult-card__game-rules">AHLiEEN -BEEZ- PAiPR</text>
-            <text class="difficult-card__game-rules">i -BiET- ... UH UM ... i MEEN ... UHEM ... AHLEiEN -BEEST- EVFREETiNG</text>
+            <text class="difficult-card__game-rules">i -BiET- ... UH UM ... i MEEN ... iZ MOR FHUN iFF SURPRiZ</text>
             <h6 class="difficult-card_game-rules">yool seei heh heh</h6>
             <h3 class="difficult-card__game-rules">**THIZ WUN MOAR FUHN TRUZ MEE**</h3>
           </text>
