--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       <text class="top-border__secret-alien-win-count">WiNZES: 0</text>
     </div>
     <section class="game-board">
+      <text class="game-board__choose-mode">CHUUZ WON</text>
+      <text class="game-board__click-here">CLiKEE KLiCC!!!</text>
       <button class="game-board__classic-game-button">
-        <h3>STORHT CLASEK GAYM (NO DETH i PROHMiS)</h3>
-        <img class="classic-card__cross-out" src="./assets/cross-out.png" alt="cross_out_on_classic_game_button">
+        <h3>STORHT CLASEK GAYM</h3>
         <div class="classic-card">
           <text class="classic-card__classic-game">CLASiEK GAEM
-            <text class="classic-card__game-rules">++++================================++++</text>
+            <text class="classic-card__game-rules">++++==========================++++</text>
             <text class="classic-card__game-rules">ROK -BEETZ- SiHZRZ</text>
             <text class="classic-card__game-rules">SiSORZ -BEEZ- PAiPR</text>
             <text class="classic-card__game-rules">PAPRE -BEiT- ... ??? i FRGiT SRY</text>
@@ -27,14 +28,20 @@
           </text>
         </div>
       </button>
+      <div class="difficult-card__deco-button">
+        <div class="difficult-card__deco-button-one difficult-card__deco-button-helper"></div>
+        <div class="difficult-card__deco-button-two difficult-card__deco-button-helper"></div>
+        <div class="difficult-card__deco-button-three"></div>
+        <div class="difficult-card__deco-button-four difficult-card__deco-button-helper"></div>
+      </div>
       <button class="game-board__difficult-game-button">
-        <h3>STAHT PiESFiL REELAKSiENG GAiME (BEZ TOBSHUN)</h3>
+        <h3>STAHT PiESFiL REELAKSiENG GAiME (NO DETH i PROHMiS)</h3>
         <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
         <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
         <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
         <div class="difficult-card">
           <text class="difficult-card__difficult-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK
-            <text class="difficult-card__game-rules">++++================================++++</text>
+            <text class="difficult-card__game-rules">++++===============================================================++++</text>
             <text class="difficult-card__game-rules">AiLAEEN -BEETZ- SiHZRZ</text>
             <text class="difficult-card__game-rules">AHLiEEN -BEEZ- PAiPR</text>
             <text class="difficult-card__game-rules">i -BiET- ... UH UM ... i MEEN ... iZ MOR FHUN iFF SURPRiZ</text>
@@ -43,6 +50,12 @@
           </text>
         </div>
       </button>
+    </section>
+    <section class="game-board-difficult hidden">
+      <img class="game-board-difficult__rock-button" src="./assets/rock.png">
+      <img class="game-board-difficult__paper-button" src="./assets/pay.png">
+      <img class="game-board-difficult__paper-button-two" src="./assets/pear.png">
+      <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
     </section>
     <div class="bottom-border">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
