Create new starting page

--- a/index.html
+++ b/index.html
@@ -7,24 +7,36 @@
     <title>DA ROK, PAYPEAR, CEESARZ: 2 DETH 2 FJUREEUS</title>
   </head>
   <body>
-    <div class="top-border">
+    <section class="cia-warning">
+      <img class="cia-warning__cia-logo" src="./assets/cia-warning.png">
+      <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an exquisitely designed, and intricately mesmerizing website and its apparent link to a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon its seizure, WEBSAF agents reported that the site had been masquerading as a harmless web application, designed to provide its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". The website itself is now quarantined within secure, internal CIA servers, a feat that was accomplished purely by accident during our annual "Tour HQ Week" (a lively festival organized by HR, their specially trained staff travelling from office to office performing their widely-acclaimed black magic rituals/sacrifices. Their zealous fervor never fails to boost agency morale, and we are eternally grateful for them; but I digress). The descision was made to keep the site "live" (though partitioned off from public access) in the hopes that clues may someday be gleaned from the data it regularly attempts to send out into the ether. All attempts at tracing said data have failed, however, as it travels by unknown means.</text>
+      <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing the site. Those who have not achieved complete mastery over their own impulses/instincts will quickly succumb to the raw, terrible beauty and sophistication of the website (which appears designed to lull its victims into a false sense of security, perhaps to make them easier targets for abduction). The only thing we know for sure is that the site is NOT RUN BY ALIENS.</text>
+      <text class="cia-warning__disclaimer">You may now proceed to the website via the link provided below. And, agent? If you choose to continue down this dreadful road, you're on your own; consider yourself warned, you brave fool.</text>
+      <text class="cia-warning__disclaimer">It was truly an honor serving with you. Methodalis functionalis, and...good luck.</text>
+      <button class="cia-warning__proceed-button">PROCEED?</button>
+    </section>
+    <div class="top-border hidden">
       <img class="top-border__secret-alien-image" src="./assets/computer-player.png">
       <img class="top-border__secret-alien-image-two" src="./assets/disguise.png">
-      <text class="top-border__secret-alien-name">N0TT SEEKRiT AHLEEiN</text>
-      <text class="top-border__secret-alien-win-count">WiNZES: 0</text>
+      <text class="top-border__secret-alien-name">NOT SEEKRIT ALEIN</text>
+      <text class="top-border__secret-alien-win-count">WiNS: 0</text>
     </div>
-    <section class="game-board">
-      <text class="game-board__choose-mode">CHUUZ WON</text>
-      <text class="game-board__click-here">CLiKEE KLiCC!!!</text>
+    <section class="game-board hidden">
+      <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png">
+      <text class="game-board__choose-mode">CHOOZ 1
+        <text class="game-board__bad-text">BAD</text>
+        <text class="game-board__good-text">GHOOD</text>
+      </text>
+      <text class="game-board__click-here">CLIK HEER OR HEER!!!</text>
       <button class="game-board__classic-game-button">
-        <h3>STORHT CLASEK GAYM</h3>
+        <h3>STRT CLASIK GAYM</h3>
         <div class="classic-card">
-          <text class="classic-card__classic-game">CLASiEK GAEM
+          <text class="classic-card__classic-game">CLASIK GAYM
             <text class="classic-card__game-rules">++++==========================++++</text>
-            <text class="classic-card__game-rules">ROK -BEETZ- SiHZRZ</text>
-            <text class="classic-card__game-rules">SiSORZ -BEEZ- PAiPR</text>
-            <text class="classic-card__game-rules">PAPRE -BEiT- ... ??? i FRGiT SRY</text>
-            <text class="classic-card__game-rules">LEZ PLAE NOUW HUREEE</text>
+            <text class="classic-card__game-rules">ROOL 1) ROK -BEET- SIZORZ</text>
+            <text class="classic-card__game-rules">ROOL 2) SIZORZ -BEET- PAIPR</text>
+            <text class="classic-card__game-rules">ROOL 3) PAIPR -BEET- ... ??? I FURGIT NOW SRY</text>
+            <text class="classic-card__game-rules">LETZ PLAI HURREE</text>
           </text>
         </div>
       </button>
@@ -35,29 +47,40 @@
         <div class="difficult-card__deco-button-four difficult-card__deco-button-helper"></div>
       </div>
       <button class="game-board__difficult-game-button">
-        <h3>STAHT PiESFiL REELAKSiENG GAiME (NO DETH i PROHMiS)</h3>
+        <h3>START PIESFUL REELAKSING GAYM (NO DETH I PROMIS)</h3>
         <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
         <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
         <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
         <div class="difficult-card">
-          <text class="difficult-card__difficult-game">EiZEE GMAE!!! YAS AN ViREE HAPiE GAEM SEEE LOUK
+          <text class="difficult-card__difficult-game">EZ MODE!!! YES AND VERYE HAPPIE SEE LOOK AT COOL ROOLZ:
             <text class="difficult-card__game-rules">++++===============================================================++++</text>
-            <text class="difficult-card__game-rules">AiLAEEN -BEETZ- SiHZRZ</text>
-            <text class="difficult-card__game-rules">AHLiEEN -BEEZ- PAiPR</text>
-            <text class="difficult-card__game-rules">i -BiET- ... UH UM ... i MEEN ... iZ MOR FHUN iFF SURPRiZ</text>
-            <h6 class="difficult-card_game-rules">yool seei heh heh</h6>
-            <h3 class="difficult-card__game-rules">**THIZ WUN MOAR FUHN TRUZ MEE**</h3>
+            <text class="difficult-card__game-rules">ROOL 1) ALEIN -BEET- SIZORZ!!!! <----- NISE!</text>
+            <text class="difficult-card__game-rules">ROOL 2) ALEIN -BEET- PAIPR!!!! <------- GUD TO KNO!!!</text>
+            <text class="difficult-card__game-rules">ALEIN -BEET- ..UH... ACCTUALY ITZ MOAR FUN IF SURPRIZ!</text>
+            <h6 class="difficult-card_game-rules">yool see heh heh</h6>
+            <h3 class="difficult-card__game-rules">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
           </text>
         </div>
       </button>
+    </section>
+    <section class="game-board-classic hidden">
+      <img class="game-board-classic__rock-button" src="./assets/rock.png">
+      <img class="game-board-classic__paper-button" src="./assets/pay.png">
+      <img class="game-board-classic__paper-button-two" src="./assets/pear.png">
+      <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png">
+      <text class="game-board-classic__explanation-text">the actor's name is cesar romero...that's the joke...feel free to lol, now</text>
     </section>
     <section class="game-board-difficult hidden">
       <img class="game-board-difficult__rock-button" src="./assets/rock.png">
       <img class="game-board-difficult__paper-button" src="./assets/pay.png">
       <img class="game-board-difficult__paper-button-two" src="./assets/pear.png">
       <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
+      <img class="game-board-difficult__wimpy-alien-button" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+      <img class="game-board-difficult__alien-button" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+      <img class="game-board-difficult__bigger-alien-button" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+      <text class="game-board-difficult__no-touchy hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
     </section>
-    <div class="bottom-border">
+    <div class="bottom-border hidden">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
