Add display winner card section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="difficult-card__deco-button-four difficult-card__deco-button-helper"></div>
       </div>
       <button class="game-board__difficult-game-button">
-        <h3>START PIESFUL REELAKSING GAYM (NO DETH I PROMIS)</h3>
+        <h3>START PIESFUL AND REELAKSING GAYM (NO DETH I PROMIS)</h3>
         <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
         <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
         <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
@@ -79,6 +79,11 @@
       <img class="game-board-difficult__alien-button" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
       <img class="game-board-difficult__bigger-alien-button" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
       <text class="game-board-difficult__no-touchy hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
+    </section>
+    <section class="winner-card">
+      <text class="winner-card__outcome-is">AND TEH WINNR... ... .......... IZ.. . ........</text>
+      <div class="winner-card__display-winner">
+      </div>
     </section>
     <div class="bottom-border hidden">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
