Refactor displayed text

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>DA ROK, PAYPEAR, CEESARZ: 2 DETH 2 FJUREEUS</title>
   </head>
   <body>
     <section class="cia-warning">
       <img class="cia-warning__cia-logo" src="./assets/cia-warning.png">
-      <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an exquisitely designed, and intricately mesmerizing website and its apparent link to a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon its seizure, WEBSAF agents reported that the site had been masquerading as a harmless web application, designed to provide its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". The website itself is now quarantined within secure, internal CIA servers, a feat that was accomplished purely by accident during our annual "Tour HQ Week", when special agent REDACTED threw thier REDACTED REDACTED REDACTED off the roof of building REDACTED. By then, a large crowd of horrified onlookers had gathered around the REDACTED REDACTED as agent REDACTED began to REDACTED REDACTED SUPER-REDACTED with the REDACTED REDACTED, like a some sort of twisted and mercurial Cricket match. So naturally, everyone finally warmed up to the idea, and the entire agency participated in the DEH-HEH-HEFINTELY-REDACTED festivities, happily attending all the REDACTED REDACTED SUPER-OMEGA-REDACTED various black magic tutorials/workshops. But I digress.</text>
-      <text class="cia-warning__disclaimer">The descision was made to keep the site "live" (though partitioned off from public access) in the hopes that clues may someday be gleaned from the data it regularly attempts to send out into the ether. All attempts at tracing said data have failed, however, as it travels by unknown means.</text>
-      <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing the site. Those who have not achieved complete mastery over their own impulses/instincts will quickly succumb to the raw, terrible beauty and sophistication of the website (which appears designed to lull its victims into a false sense of security, perhaps to make them easier targets for abduction). The only thing we know for sure is that the site is NOT RUN BY ALIENS.</text>
+      <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an intricately mesmerizing website (id="BU-77") and its apparent link to a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon BU-77's seizure, WEBSAF agents reported that it had been masquerading as a harmless web application, providing its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". Thankfully, BU-77 itself is now quarantined within our own secure, internal CIA servers, a feat which required unbelievable luck to accomplish. It was purely by happenstance that WEBSAF agents were attempting to seize control of BU-77 at the exact moment that special agent REDACTED (in an unrelated incident) threw thier REDACTED REDACTED REDACTED off the roof of building REDACTED. A large crowd of horrified onlookers had quickly gathered around the REDACTED REDACTED as the halucinating agent began to REDACTED REDACTED SUUUUUUPER-REDACTED with the REDACTED miniatures. Naturally, it was at this point that everyone began warming up to the idea, and the entire agency participated in the most brutal DEH-HEH-HEFINTELY-REDACTED in recorded history. While in their fevered, trance-like state, they quite happily REDACTED all over the REDACTED REDACTED with their own SUPER-OMEGA-REDACTED, which obviously led to the succesful seizure of BU-77 (some say it's inconceivable that WEBSAF never thought to try containing BU-77 this way, but I say hindsight truly is 20-20). Yet, I digress.</text>
+      <text class="cia-warning__disclaimer">The descision was made to keep BU-77 "live" (though partitioned off from public access) in the hopes that clues may someday be gleaned from the data it regularly attempts to send out into the ether. All attempts at tracing said data have failed, however, as it travels by unknown means.</text>
+      <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing BU-77; only those who have achieved complete mastery over their own impulses/instincts may do so. Do not let the unpoilshed, even childish look of BU-77 cause you to let your guard down. We have strong evidence that its appearance was an intentional "feature", if you will, being designed to lull its victims into a false sense of security (perhaps to make them easier targets for abduction). The true danger of BU-77 lies hidden behind its silly facade, within the actual code. Top programmers from all over the world have been secretly transported to the facility housing it, yet none have been able to decipher how BU-77 works. One programming savant, in particular, had to be tranquilzed by on-site staff after he began thrashing violently around on the floor, screaming "It's genius, it's genius! The code...it's brilliant! We're all doomed!". Upon coming back to consciousness several hours later, he claimed no local memory of the event. Our own analysts have deemed the code to be "far too advanced for the current limits of human understanding". In fact, even after all these years, there is only one thing we know for sure about BU-77; it was most definitely NOT created by ALIENS.</text>
       <text class="cia-warning__disclaimer">You may now proceed to the website via the link provided below. And, agent? If you choose to continue down this dreadful road, you're on your own; consider yourself warned, you brave fool.</text>
       <text class="cia-warning__disclaimer">It was truly an honor serving with you. Methodalis functionalis, and...good luck.</text>
       <button class="cia-warning__proceed-button">PROCEED?</button>
@@ -67,13 +70,12 @@
     <section class="game-board-classic hidden">
       <div class="" id="classicCard">
         <img class="game-board-classic__rock-button" src="./assets/rock.png">
-        <img class="game-board-classic__paper-button" src="./assets/pay.png">
-        <img class="game-board-classic__paper-button-two" src="./assets/pear.png">
+        <img class="game-board-classic__paper-button" src="./assets/paypear.png">
         <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png">
         <text class="game-board-classic__explanation-text">the actor's name is cesar romero...that's the joke...feel free to lol, now</text>
       </div>
       <div class="hidden" id="winnerCard">
-        <text class="winner-card__outcome-is">AND TEH WINNR... ... .......... IZ.. . ........</text>
+        <text class="winner-card__outcome-is">AND TEH WINNR IZ --</text>
         <div class="winner-card__display-winner">
         </div>
       </div>
@@ -88,15 +90,16 @@
       <img class="game-board-difficult__bigger-alien-button" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
       <text class="game-board-difficult__no-touchy hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
     </section>
-    <section class="winner-card hidden">
-      <text class="winner-card__outcome-is">AND TEH WINNR... ... .......... IZ.. . ........</text>
+    <!-- <section class="winner-card hidden">
+      <text class="winner-card__outcome-is">AND TEH WINNR IZ</text>
       <div class="winner-card__display-winner">
       </div>
-    </section>
+    </section> -->
     <div class="bottom-border hidden">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
+      <button class="bottom-border__change-mode-button hidden">LETZ PLAI BEDDER GAYM CLIK HEER K?</button>
     </div>
     <script type="text/javascript" src="./Player.js"></script>
     <script type="text/javascript" src="./Game.js"></script>
