--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   <body>
     <section class="cia-warning">
       <img class="cia-warning__cia-logo" src="./assets/cia-warning.png">
-      <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an intricately mesmerizing website (id="BU-77") and its apparent link to a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon BU-77's seizure, WEBSAF agents reported that it had been masquerading as a harmless web application, providing its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". Thankfully, BU-77 itself is now quarantined within our own secure, internal CIA servers, a feat which required unbelievable luck to accomplish. It was purely by happenstance that WEBSAF agents were attempting to seize control of BU-77 at the exact moment that special agent REDACTED (in an unrelated incident) threw thier REDACTED REDACTED REDACTED off the roof of building REDACTED. A large crowd of horrified onlookers had quickly gathered around the REDACTED REDACTED as the halucinating agent began to REDACTED REDACTED SUUUUUUPER-REDACTED with the REDACTED miniatures. Naturally, it was at this point that everyone began warming up to the idea, and the entire agency participated in the most brutal DEH-HEH-HEFINTELY-REDACTED in recorded history. While in their fevered, trance-like state, they quite happily REDACTED all over the REDACTED REDACTED with their own SUPER-OMEGA-REDACTED, which obviously led to the succesful seizure of BU-77 (some say it's inconceivable that WEBSAF never thought to try containing BU-77 this way, but I say hindsight truly is 20-20). Yet, I digress.</text>
+      <text class="cia-warning__disclaimer">ACCESS GRANTED</text>
+      <text class="cia-warning__disclaimer">Welcome, special agent YOU YOURSELF
+      <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an intricate and mesmerizing website (id="BU-77") due to its apparent link with a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon BU-77's seizure, WEBSAF agents reported that it had been masquerading as a harmless web application, providing its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". As such, you will find two "game modes" available to "play" on the main page. One of these appears to be harmless while the other...well, you'll see.</text>
+      <text class="cia-warning__disclaimer">Thankfully, BU-77 itself is now quarantined within our own secure, internal CIA servers. According to the WEBSAF official report, it was:</text>
+      <text class="cia-warning__disclaimer">"...purely by happenstance that our agents were attempting to seize control of BU-77 at the exact moment that special agent REDACTED (in an unrelated incident) threw thier REDACTED REDACTED REDACTED off the roof of building REDACTED. A large number of horrified staff had quickly gathered around the REDACTED REDACTED as the halucinating agent began to REDACTED REDACTED SUUUUUUPER-REDACTED with the REDACTED miniatures. Naturally, it was at this point that the onlookers began warming up to the idea, and agency-wide participation led to the most brutal DEH-HEH-HEFINTELY-REDACTED in recorded history. The fevered, trance-like state exhibited by so many that day led the participants to happily REDACTED all over the REDACTED REDACTED with their own SUPER-OMEGA-REDACTED, leading directly to the succesful seizure of BU-77."</text>
+      <text class="cia-warning__disclaimer">(AUTHOR'S NOTE: some insist it's inconceivable that WEBSAF never thought to try containing BU-77 in the aforementioned manner, while others argue that hindsight is 20-20; but I digress)</text>
       <text class="cia-warning__disclaimer">The descision was made to keep BU-77 "live" (though partitioned off from public access) in the hopes that clues may someday be gleaned from the data it regularly attempts to send out into the ether. All attempts at tracing said data have failed, however, as it travels by unknown means.</text>
       <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing BU-77; only those who have achieved complete mastery over their own impulses/instincts may do so. Do not let the unpoilshed, even childish look of BU-77 cause you to let your guard down. We have strong evidence that its appearance was an intentional "feature", if you will, being designed to lull its victims into a false sense of security (perhaps to make them easier targets for abduction). The true danger of BU-77 lies hidden behind its silly facade, within the actual code. Top programmers from all over the world have been secretly transported to the facility housing it, yet none have been able to decipher how BU-77 works. One programming savant, in particular, had to be tranquilzed by on-site staff after he began thrashing violently around on the floor, screaming "It's genius, it's genius! The code...it's brilliant! We're all doomed!". Upon coming back to consciousness several hours later, he claimed no local memory of the event. Our own analysts have deemed the code to be "far too advanced for the current limits of human understanding". In fact, even after all these years, there is only one thing we know for sure about BU-77; it was most definitely NOT created by ALIENS.</text>
       <text class="cia-warning__disclaimer">You may now proceed to the website via the link provided below. And, agent? If you choose to continue down this dreadful road, you're on your own; consider yourself warned, you brave fool.</text>
@@ -74,32 +79,34 @@
         <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png">
         <text class="game-board-classic__explanation-text">the actor's name is cesar romero...that's the joke...feel free to lol, now</text>
       </div>
-      <div class="hidden" id="winnerCard">
+      <div class="hidden" id="classicWinnerCard">
         <text class="winner-card__outcome-is">AND TEH WINNR IZ --</text>
         <div class="winner-card__display-winner">
         </div>
       </div>
     </section>
     <section class="game-board-difficult hidden">
-      <img class="game-board-difficult__rock-button" src="./assets/rock.png">
-      <img class="game-board-difficult__paper-button" src="./assets/pay.png">
-      <img class="game-board-difficult__paper-button-two" src="./assets/pear.png">
-      <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
-      <img class="game-board-difficult__wimpy-alien-button" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
-      <img class="game-board-difficult__alien-button" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
-      <img class="game-board-difficult__bigger-alien-button" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
-      <text class="game-board-difficult__no-touchy hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
-    </section>
-    <!-- <section class="winner-card hidden">
-      <text class="winner-card__outcome-is">AND TEH WINNR IZ</text>
-      <div class="winner-card__display-winner">
+      <div class="" id="difficultCard">
+        <img class="game-board-difficult__rock-button" src="./assets/rock.png">
+        <img class="game-board-difficult__paper-button" src="./assets/paypear.png">
+        <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
+        <img class="game-board-difficult__wimpy-alien-button not-allowed" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+        <img class="game-board-difficult__alien-button not-allowed" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+        <img class="game-board-difficult__bigger-alien-button not-allowed" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+        <text class="game-board-difficult__no-touchy not-allowed hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
       </div>
-    </section> -->
+      <div class="hidden" id="difficultWinnerCard">
+        <text class="winner-card-difficult__outcome-is">AND TEH WINNR IZ --</text>
+        <div class="winner-card-difficult__display-winner">
+        </div>
+      </div>
+    </section>
     <div class="bottom-border hidden">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
       <button class="bottom-border__change-mode-button hidden">LETZ PLAI BEDDER GAYM CLIK HEER K?</button>
+      <button class="bottom-border__play-fairly hidden">pssst...click here for a FAIR game... *smile*</button>
     </div>
     <script type="text/javascript" src="./Player.js"></script>
     <script type="text/javascript" src="./Game.js"></script>
