--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <img class="game-board-fair__rock-button" src="./assets/rock.png">
         <img class="game-board-fair__paper-button" src="./assets/paypear.png">
         <img class="game-board-fair__scissors-button" src="./assets/scissors-romero.png">
-        <img class="game-board-fair__wimpy-alien-button not-allowed" src="./assets/wimpy-alien.png">
-        <img class="game-board-fair__alien-button not-allowed" src="./assets/alien.png">
-        <img class="game-board-fair__bigger-alien-button not-allowed" src="./assets/bigger-alien.png">
+        <img class="game-board-fair__wimpy-alien-button" src="./assets/wimpy-alien.png">
+        <img class="game-board-fair__alien-button" src="./assets/alien.png">
+        <img class="game-board-fair__bigger-alien-button" src="./assets/bigger-alien.png">
       </div>
       <div class="hidden" id="fairWinnerCard">
         <text class="winner-card-fair__outcome-is">AND TEH WINNR IZ --</text>
