Refactor html/make one new button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <img class="top-border__secret-alien-image-two" src="./assets/disguise.png">
       <text class="top-border__secret-alien-name">NOT SEEKRIT ALEIN</text>
       <text class="top-border__secret-alien-win-count">WiNS: 0</text>
+      <button class="top-border__change-mode-back hidden">NO LIK FARE! GO BAK NOW! CLIK HEER NOW!</button>
     </div>
     <section class="game-board hidden">
       <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png">
@@ -121,7 +122,6 @@
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
       <button class="bottom-border__change-mode-button hidden">LETZ PLAI BEDDER GAYM CLIK HEER K?</button>
-      <button class="bottom-border__change-mode-alt-button hidden">NO PLAI FAER! GO BAK NOW!</button>
       <button class="bottom-border__play-fairly hidden">pssst...click here for a FAIR game... *smile*</button>
     </div>
     <script type="text/javascript" src="./Player.js"></script>
